--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -35,3 +35,24 @@
         }
     }
 }
+#discoverSect{
+.discover{
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+    h1{
+   font-size: 50px;
+
+    }
+    h3{
+   color: gray;
+
+    }
+}
+.common{
+    display: flex;
+}
+
+
+}
+
